--- a/requirements.txt
+++ b/requirements.txt
@@ -81,6 +81,7 @@ nvidia-nvtx-cu12==12.6.77
 opencv-python==4.11.0.86
 overrides==7.7.0
 packaging==25.0
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
@@ -94,8 +95,12 @@ pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
 pyparsing==3.2.3
+PyQt6==6.9.0
+PyQt6-Qt6==6.9.0
+PyQt6_sip==13.10.0
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
 referencing==0.36.2
@@ -103,6 +108,8 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.24.0
+scipy==1.15.2
+seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==79.0.1
 six==1.17.0
@@ -114,10 +121,12 @@ terminado==0.18.1
 tinycss2==1.4.0
 torch==2.7.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 triton==3.3.0
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.13.2
+tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.4.0
 wcwidth==0.2.13
